[gd_scene load_steps=7 format=3 uid="uid://bc34mteplgg13"]

[ext_resource type="Script" path="res://scripts/level_manager.gd" id="1_sd1jd"]
[ext_resource type="Script" path="res://scripts/room_factory.gd" id="2_mpqw0"]
[ext_resource type="Texture2D" uid="uid://beql77jewu5da" path="res://textures/tilemaps/tileset.png" id="3_r1whp"]
[ext_resource type="Script" path="res://scripts/layout_generator.gd" id="4_eo4db"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_errgt"]
texture = ExtResource("3_r1whp")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0

[sub_resource type="TileSet" id="TileSet_j3yeq"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_errgt")

[node name="MapGenerator" type="Node2D"]

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("1_sd1jd")

[node name="RoomFactory" type="Node2D" parent="LevelManager"]
script = ExtResource("2_mpqw0")

[node name="LayoutGenerator" type="Node2D" parent="LevelManager"]
script = ExtResource("4_eo4db")

[node name="TileMapLayer" type="TileMapLayer" parent="LevelManager"]
tile_set = SubResource("TileSet_j3yeq")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 640)
zoom = Vector2(0.2, 0.2)
